# eximia-academy-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  biome.json  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/central/: Dockerfile  next.config.ts  package.json  tsconfig.json
docs/: ACCESSIBILITY_CHECKLIST.md  COMPONENT_IMPLEMENTATION_GUIDE.md  CORRECTION-PLAN.md  DEPLOY-GUIDE.md  PATTERN_LIBRARY.md  README_DESIGN_SYSTEM.md  ROADMAP.md  architecture.md  benchmark-agentes-socraticos.md  brief.md  capitulo-exemplo-analise-problemas.md  curso-analise-solucao-problemas.md  design-system-guide.md  getting-started.md  guia-visual-apresentacao-analise-problemas.md  prd-v2.md  prd.md  project-brief-v2.md  review-architecture.md  screens.md  shock-report.html
microservice/: .env.example  .gitignore  Dockerfile  SPRINT2_NOTES.md  docker-compose.yml  pyproject.toml  supabase_migrations.sql
microservice/app/: __init__.py  config.py  main.py
microservice/app/models/: __init__.py  schemas.py
microservice/app/routes/: __init__.py  blueprint.py  health.py
microservice/app/services/: __init__.py  blueprint_generator.py  job_manager.py  supabase_client.py
microservice/tests/: __init__.py  conftest.py  test_blueprint.py  test_health.py  test_integration.py
scripts/: copy-questions.mjs  copy-slides.mjs  fix-progress.mjs  generate-narrations.mjs  send-migration-email.mjs
supabase/: config.toml  seed-asp-chapter.ts  seed-cory-users.py  seed-remote.ts  seed.sql
(+1098 files in other folders)
